reuse isBlank from StringUtils